# universal-node-network

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  ecosystem.yaml  pyproject.toml  seed.yaml
.github/workflows/: ci.yml  codeql.yml
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
src/: __init__.py  assembly.py  discovery.py  hierarchy.py  homeostasis.py  network.py  node.py
tests/: test_assembly.py  test_hierarchy.py  test_hierarchy_network.py  test_homeostasis.py  test_network.py  test_node.py
